# ipa_rosi_workshops

./: README.md  snp_prbt.rosinstall  snp_ur5.rosinstall
snp_demo_gui/src/: godel_bridge.cpp
snp_prbt_bringup/: package.xml
snp_prbt_bringup/launch/: hardware_bringup.launch  prbt_gazebo.launch  prbt_godel.launch
snp_prbt_description/: package.xml
snp_prbt_description/urdf/: snp_prbt_demo.urdf.xacro
snp_ur5_bringup/: CMakeLists.txt  package.xml
snp_ur5_description/: CMakeLists.txt  package.xml
snp_ur5_description/urdf/: snp_ur_demo.urdf.xacro
snp_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
snp_ur5_moveit_config/config/: fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  snp_ur_description.srdf
snp_ur5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  snp_ur_description_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
snp_ur_bringup/: CMakeLists.txt  package.xml
snp_ur_description/: CMakeLists.txt  package.xml
snp_ur_description/meshes/: rock.stl
snp_ur_description/urdf/: ensenso.urdf.xacro  snp_tool.urdf.xacro  snp_ur_demo.urdf.xacro
snp_ur_description/urdf/acf_with_grinder/: acf_110_01_xs_with_grinder.urdf.xacro  acf_111_04_with_grinder.urdf.xacro
snp_ur_support/: CMakeLists.txt  package.xml
(+9 files in other folders)
