<?xml version="1.0"?>
<package format="2">
  <name>snp_ur_description</name>
  <version>0.0.0</version>
  <description>The snp_ur_description package</description>

  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</author>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
